bk_ida/gccida/g0/cleanup_subreg_operands
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3167:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3169:19: error: use of undeclared identifier 'recog_data_0'
if ( **( _WORD **)recog_data_0.operand_loc[i] == 63 ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3171:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = alter_subreg( recog_data_0.operand_loc[i]); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3171:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = alter_subreg( recog_data_0.operand_loc[i]); 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3173:22: error: use of undeclared identifier 'recog_data_0'
else if ( *( _WORD *)recog_data_0.operand[i] == 75 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3174:15: error: use of undeclared identifier 'recog_data_0'
|| *( _WORD *)recog_data_0.operand[i] == 78 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3175:15: error: use of undeclared identifier 'recog_data_0'
|| *( _WORD *)recog_data_0.operand[i] == 66 ) 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3177:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = walk_alter_subreg( recog_data_0.operand_loc[i]); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3177:46: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = walk_alter_subreg( recog_data_0.operand_loc[i]); 
                                             ^~~~~~~~~~~~
                                             recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3180:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( ia = 0; ia < recog_data_0.n_dups; ++ia ) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3182:19: error: use of undeclared identifier 'recog_data_0'
if ( **( _WORD **)recog_data_0.dup_loc[ia] == 63 ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3184:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v1 = recog_data_0.dup_loc[ia]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3187:24: error: use of undeclared identifier 'recog_data_0'
else if ( **( _WORD **)recog_data_0.dup_loc[ia] == 75 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3188:17: error: use of undeclared identifier 'recog_data_0'
|| **( _WORD **)recog_data_0.dup_loc[ia] == 78 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3189:17: error: use of undeclared identifier 'recog_data_0'
|| **( _WORD **)recog_data_0.dup_loc[ia] == 66 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/final.c:3191:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v2 = recog_data_0.dup_loc[ia]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cleanup_subreg_operands/src/obj/final.o] Error 1
